[package]
name = "ip-heatmap"
version = "0.1.0"
edition = "2024"
authors = ["Ties de Kock <ties@tiesdekock.nl>"]
description = "Generate Hilbert curve heatmap of IP space"
license = "GPL-2.0"

[dependencies]
image = { version = "0.25.6", features = ["png"], default-features = false }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4.27"
env_logger = "0.11.8"
ipnet = "2.11"
colorous = "1.0.16"
